# WebAssembly_rust

./: CARGO_TOML_FIX_SUMMARY.md  Cargo.toml  DEPENDENCY_UPDATE_2026_03_19.md  DEPENDENCY_UPDATE_REPORT.md  DEPLOYMENT_GUIDE.md  Dockerfile  FINAL_100_PERCENT_COMPLETION_REPORT.md  FINAL_CARGO_TOML_FIX_SUMMARY.md  FINAL_PROJECT_ENHANCEMENT_COMPLETION_REPORT.md  FINAL_PROJECT_STATUS_REPORT.md  FINAL_UPDATE_SUMMARY.md  IMPLEMENTATION_PLAN.md  PROJECT_ENHANCEMENT_SUMMARY_2025.md  PROJECT_UPDATE_COMPLETE.md  README.md  RUST194_WASI03_WEBASSEMBLY30_COMPLETION_REPORT.md  RUST_194_WEBASSEMBLY_UPDATE_REPORT.md  ULTIMATE_100_PERCENT_COMPLETION_REPORT.md  ULTIMATE_PROJECT_COMPLETION_REPORT.md  docker-compose.yml  package.json  webpack.config.js
.github/workflows/: ci-cd-pipeline.yml  ci.yml  deploy.yml
docker/: init.sql  nginx-lb.conf  nginx.conf  prometheus.yml
examples/advanced/: Cargo.toml
examples/advanced/src/: lib.rs
examples/basic/: Cargo.toml
examples/basic/src/: lib.rs
examples/performance/: Cargo.toml
examples/performance/src/: lib.rs
frontend/: index.html  package.json  webpack.config.js
frontend/src/: index.js
frontend/src/components/: LanguageSelector.js
frontend/src/i18n/: index.js
frontend/src/styles/: main.css
scripts/: build.ps1  build.sh  docker-deploy.ps1  generate-api-docs.ps1  performance-optimization.ps1  security-audit.ps1  setup-dev.ps1
src/: index.html  index.js
tests/integration/: Cargo.toml
tests/integration/src/: lib.rs
wasm/: CODE_QUALITY_REVIEW_AND_REFACTORING_REPORT.md  COMPILATION_ERRORS_SUMMARY.md  COMPILATION_FIX_REPORT.md  COMPREHENSIVE_REFACTORING_COMPLETION_REPORT.md  Cargo.toml  Dockerfile  EXAMPLE_FILES_FIX_REPORT.md  QUICK_START.md  docker-compose.yml  fix_compilation_errors.md  webassembly.md
wasm/benches/: advanced_performance_benchmarks.rs  rust_194_benchmarks.rs
wasm/docs/: ADVANCED_PERFORMANCE_OPTIMIZATION.md  ADVANCED_TUTORIALS_2025.md  ADVANCEMENT_SUMMARY_2025.md  CI_CD_AND_AUTOMATION_GUIDE.md  COMMUNITY_RESOURCES_AND_CONTRIBUTION_GUIDE.md  COMPREHENSIVE_GUIDE_2025.md  DEPLOYMENT_AND_OPERATIONS_GUIDE.md  DEVELOPER_WORKFLOW_GUIDE.md  DOCUMENTATION_ENHANCEMENT_SUMMARY_2025.md  DOCUMENTATION_UPDATE_SUMMARY_2025.md  FINAL_ADVANCEMENT_SUMMARY_2025.md  FINAL_CONTINUOUS_ADVANCEMENT_SUMMARY_2025.md  NAVIGATION_INDEX.md  PRACTICAL_APPLICATION_SCENARIOS.md  README.md  SECURITY_DEVELOPMENT_GUIDELINES.md  SEMANTIC_MODEL_2025.md  TESTING_STRATEGY_AND_BEST_PRACTICES.md  TROUBLESHOOTING_AND_DEBUGGING_GUIDE.md  UPDATED_EXAMPLES_2025.md
wasm/docs/2025_september/: FINAL_PROJECT_ADVANCEMENT_REPORT.md  FINAL_PROJECT_ENHANCEMENT_REPORT.md  PROJECT_COMPLETION_SUMMARY.md  ULTIMATE_ADVANCEMENT_REPORT.md  WEBASSEMBLY_2_0_RUST_190_INTEGRATION_REPORT.md
wasm/docs/libraries/: README.md
wasm/ecosystem/: ecosystem_config.toml
wasm/examples/: component_model_demo.rs  image_processing_demo.rs  production_deployment_demo.rs  rust_190_demo.rs  rust_194_demo.rs  scientific_computing_demo.rs  wasi_03_demo.rs  webassembly_2_0_advanced_demo.rs  webassembly_2_0_demo.rs  webassembly_3_0_demo.rs
wasm/k8s/: webassembly-deployment.yaml
wasm/src/: ai_optimization.rs  api_gateway.rs  blockchain_web3.rs  common.rs  component_model.rs  developer_tools.rs  edge_computing.rs  error_handling.rs  global_cdn.rs  intelligent_caching.rs  lib.rs  module_marketplace.rs  monitoring_advanced.rs  quantum_computing.rs  rust_189_features.rs  rust_194_features.rs  security_advanced.rs  types.rs  wasi_03.rs  webassembly_2_0.rs  webassembly_3_0.rs
wasm/src/common/: config.rs  error.rs  logging.rs  performance.rs  serialization.rs  time.rs
wasm/src/templates/: bindings.rs.template  tests.rs.template  wasm_module.rs.template
wasm/tests/: integration_tests.rs
