[package]
name = "integration"
version = "0.1.0"
edition = "2024"
resolver = "3"
rust-version = "1.90"

[dependencies]
wasm-bindgen = "0.2.104"
wasm-bindgen-test = "0.3.44"
web-sys = { version = "0.3.80", features = [
    "console",
    "Window",
    "Document",
    "Element",
    "HtmlElement",
] }
js-sys = "0.3.80"
serde = { version = "1.0.228", features = ["derive"] }
serde-wasm-bindgen = "0.6.3"
console_error_panic_hook = "0.1.7"
wasm = { path = "../../wasm" }
basic = { path = "../../examples/basic" }
advanced = { path = "../../examples/advanced" }
performance = { path = "../../examples/performance" }

[features]
default = ["console_error_panic_hook"]
console_error_panic_hook = []
